1. Метод .of [#312907]